# --adversarial-rl-vs-minimax

./: --output  .gitignore  README.md  agent_handover.md  appendices.tex  assignment_text.txt  evaluate_all.py  minimax_analysis.py  pyproject.toml  readme.txt
docs/: 01_project_overview.md  02_game_specifications.md  03_algorithm_plans.md  04_testing_and_evaluation.md  05_project_structure.md  walkthrough.md.resolved
models/connect4/dqn/: model_500k_tuned_v11_rescue_best.pt  model_512x4_200k_best.pt  model_validity_best.pt
models/tictactoe/dqn/: optimized_200k_best.pt
models/tictactoe/qlearning/: model_best.pkl
scripts/: generate_comparison_tables.py  generate_final_report.py  generate_latex_tables.py  generate_rl_analysis.py  generate_summary_tables.py  rebuild_log.py
src/adversarial/: __init__.py  config.py  experiments.py  gui.py  play.py  plotting.py  tournament.py  train.py
src/adversarial.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/adversarial/agents/: __init__.py  base.py  default.py  dqn.py  human.py  minimax.py  qlearning.py  random.py
src/adversarial/games/: __init__.py  base.py  connect4.py  tictactoe.py
